# fastapi-sqlalchemy-example

./: .coveragerc  .gitignore  .test.env  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
src/mypackage/: crud.py  database.py  main.py  models.py  schemas.py  settings.py
src/mypackage/api/v1/: router.py
src/mypackage/api/v1/endpoints/: items.py  users.py
tests/: conftest.py  test_api.py  test_crud.py  test_database.py  test_settings.py
