[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypackage"
version = "0.1.0"
description = "to be announced"
authors = [{ name = "Your Name", email = "your.name@anonymous.com" }]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104",
    "sqlalchemy",
    "uvicorn",
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "httpx",
    "pytest",
    "pytest-cov",
    "pytest-dotenv",
]

[project.scripts]
packagename = "mypackage.__main__:main"

[project.urls]
Repository = "https://github.com/ptrstn/fastapi-sqlalchemy-pytest-example"

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
