[metadata]
name = mypackage
version = 0.1.0
author = Your Name
author_email = your.name@anonymous.com
description = to be announced
long_description = file: README.md
long_description_content_type = text/markdown
url = https://your-url.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    fastapi>=0.65.1
    sqlalchemy>=2.0.24
    uvicorn>=0.13.4

[options.extras_require]
test =
    flake8
    httpx
    pytest
    pytest-cov

[coverage:run]
omit =
    src/mypackage/database.py

[flake8]
count = True
exclude =
    .git,
    .venv,
    __pycache__,
    build,
    dist,
    venv
# Black default
max-line-length = 88
show-source = True
statistics = True
